Show referral activity on user and school profiles
